@@ -20,5 +20,12 @@
 
     <five:registerPackage package="." initialize=".initialize" />
 
+    <!-- Set up custom feature styles in order to display map in
+    plone.belowcontentbody viewlet -->
+    <subscriber
+        for="egov.contactdirectory.interfaces.IContact
+             Products.Archetypes.interfaces.IObjectInitializedEvent"
+        handler=".handlers.initializeCustomFeatureStyles"
+        />
 
 </configure>
